--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
@@ -21,8 +21,8 @@
         With a Java Application configuration selected in the Launch Configuration Dialog, select the JRE tab.
       </li>
       <li>
-        In the list of available JREs, select the JRE you want to use to launch this configuration and click <strong><strong>Apply</strong></strong>,
-        <strong><strong>Run</strong></strong>, or <strong><strong>Debug</strong></strong>.
+        In the list of available JREs, select the JRE you want to use to launch this configuration and click <strong>Apply</strong>,
+        <strong>Run</strong>, or <strong>Debug</strong>.
       </li>
     </ol>
     <p>
@@ -30,23 +30,18 @@
       libraries.&nbsp;
     </p>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="tasks-120.htm">Assigning the default JRE for the workbench</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
        <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
        <a href="../tasks/tasks-119.htm">Working with JREs</a>
     </p>
     <p>
-      <br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
