--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
@@ -17,7 +17,7 @@
     </p>
     <ol>
       <li>
-        From the drop-down menu on the <strong><strong>Debug</strong></strong> button in the workbench toolbar, select <strong>Debug...</strong>.
+        From the drop-down menu on the <strong>Debug</strong> button in the workbench toolbar, select <strong>Debug...</strong>.
       </li>
       <li>
         In the launch configuration dialog, select the launch configuration you wish to specify execution arguments for
@@ -26,42 +26,37 @@
         On the <strong>Arguments</strong> tab for the configuration, you can use the following fields as needed: 
         <ul>
           <li>
-            <strong><strong>Program Arguments</strong></strong>: Application-specific values that your code is expecting (a user name or a URL for locating help files, for
+            <strong>Program Arguments</strong>: Application-specific values that your code is expecting (a user name or a URL for locating help files, for
             example).
           </li>
           <li>
-            <strong><strong>VM Arguments</strong></strong>: Values meant to change the behavior of the Java virtual machine (VM). For example, you may need to tell the VM whether
+            <strong>VM Arguments</strong>: Values meant to change the behavior of the Java virtual machine (VM). For example, you may need to tell the VM whether
             to use a just-in-time (JIT) compiler, or you may need to specify the maximum heap size the VM should use. Refer to your VM&#39;s documentation for more information
             about the available VM arguments.
           </li>
           <li>
-            <strong><strong>Working Directory</strong></strong>: The working directory used for the launched process. To change from using the default working directory, uncheck
-            <strong><strong>Use default working directory</strong></strong> and specify the workspace or local directory to use for the working directory of the launched process.
+            <strong>Working Directory</strong>: The working directory used for the launched process. To change from using the default working directory, uncheck
+            <strong>Use default working directory</strong> and specify the workspace or local directory to use for the working directory of the launched process.
           </li>
         </ul>
       </li>
       <li>
-        Click <strong><strong>Apply</strong></strong> or <strong><strong>Debug</strong></strong> when you are done. Every time you launch this configuration, these execution
+        Click <strong>Apply</strong> or <strong>Debug</strong> when you are done. Every time you launch this configuration, these execution
         arguments will be used.
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a><br>
        <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
