--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
@@ -31,8 +31,8 @@
         In the Package Explorer, select the Java compilation unit or class file you want to launch.
       </li>
       <li>
-        If you want to debug the program first, in the top menu bar select the <strong><strong>Run &gt; Debug As &gt; Java Application</strong></strong> Otherwise, select
-        <strong><strong>Run &gt; Run As &gt; Java Application</strong></strong>
+        If you want to debug the program first, in the top menu bar select the <strong>Run &gt; Debug As &gt; Java Application</strong> Otherwise, select
+        <strong>Run &gt; Run As &gt; Java Application</strong>
       </li>
       <li>
         If you selected a Java program, your program is now launched in the mode you selected, and the launch appears in the Debug view. If you selected a Java project, you may be
@@ -45,7 +45,7 @@
     </h2>
     <p>
       You can launch a program without first selecting it in the Packages or Navigator view. For example, if the active editor is open on the program you wish to launch, you can
-      select <strong><strong>Run &gt; Debug As &gt; Java Application</strong></strong> or <strong><strong>Run &gt; Run As &gt; Java Application</strong></strong>
+      select <strong>Run &gt; Debug As &gt; Java Application</strong> or <strong>Run &gt; Run As &gt; Java Application</strong>
     </p>
     <h2>
       Launching with another launch configuration type
@@ -54,38 +54,30 @@
       You may also launch a program using a launch configuration type other than Java Application.
     </p>
     <p>
-      To do this, select a program or project in the Package Explorer, then select the launch configuration type you wish to use from the menu options under <strong><strong>Run
-      &gt; Debug As</strong></strong> in the top menu bar.
+      To do this, select a program or project in the Package Explorer, then select the launch configuration type you wish to use from the menu options under <strong>Run
+      &gt; Debug As</strong> in the top menu bar.
     </p>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-6.htm">Java views</a><br>
        <a href="../concepts/concepts-7.htm">Java editor</a><br>
        <a href="../concepts/concepts-10.htm">Debugger</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-141.htm">Connecting to a remote VM with the Java Remote Application launcher</a><br>
        <a href="../tasks/tasks-131.htm">Relaunching a program</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
        <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a><br>
-       &nbsp;
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-51.htm">Debug view</a><br>
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
     </p>
     <p>
-      <br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
