--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-134.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-134.htm
@@ -32,32 +32,25 @@
       in the Variables view. Variables can be examined by expanding those variables that have children.
     </p>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a><br>
        <a href="../concepts/concepts-7.htm">Java editor</a><br>
        <a href="../concepts/concepts-5.htm">Java perspectives</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
        <a href="../tasks/tasks-138.htm">Evaluating expressions</a><br>
        <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-51.htm">Debug view</a><br>
        <a href="../reference/ref-74.htm">Variables view</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
