--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-135.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-135.htm
@@ -20,33 +20,25 @@
         Select a suspended thread or a stack frame in a suspended thread.
       </li>
       <li>
-        Click the <strong><strong>Resume</strong></strong> button in the Debug view toolbar (or press the <strong>F8</strong> key). The thread resumes its execution, and stack
+        Click the <strong>Resume</strong> button in the Debug view toolbar (or press the <kbd>F8</kbd> key). The thread resumes its execution, and stack
         frames are no longer displayed for the thread, and the Variables view is cleared.
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-138.htm">Evaluating expressions</a><br>
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a><br>
        <a href="../tasks/tasks-134.htm">Suspending threads</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-51.htm">Debug view</a>
     </p>
-    <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
