--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
@@ -24,7 +24,7 @@
         Select a stack frame in the Debug view. The current line of execution in that stack frame is highlighted in the editor in the Debug perspective.
       </li>
       <li>
-        Click the <strong><strong>Step Over</strong></strong> button in the Debug view toolbar, or press the <strong>F6</strong> key. The currently-selected line is executed and
+        Click the <strong>Step Over</strong> button in the Debug view toolbar, or press the <kbd>F6</kbd> key. The currently-selected line is executed and
         suspends on the next executable line.
       </li>
     </ol>
@@ -36,7 +36,7 @@
         Select a stack frame in the Debug view. The current line of execution in the selected frame is highlighted in the editor in the Debug perspective.
       </li>
       <li>
-        Click the <strong><strong>Step Into</strong></strong> button in the Debug view toolbar, or press the <strong>F5</strong> key. The next expression on the currently-selected
+        Click the <strong>Step Into</strong> button in the Debug view toolbar, or press the <kbd>F5</kbd> key. The next expression on the currently-selected
         line to be executed is invoked, and execution suspends at the next executable line in the method that is invoked.
       </li>
     </ol>
@@ -48,7 +48,7 @@
         Select a stack frame in the Debug view. The current line of execution in the selected frame is highlighted in the editor in the Debug perspective.
       </li>
       <li>
-        Click the <strong><strong>Run to Return</strong></strong> button in the Debug view toolbar or press the <strong>F7</strong> key. Execution resumes until the next return
+        Click the <strong>Run to Return</strong> button in the Debug view toolbar or press the <kbd>F7</kbd> key. Execution resumes until the next return
         statement in the current method is executed, and execution suspends on the next executable line.
       </li>
     </ol>
@@ -61,8 +61,8 @@
     </p>
     <ol>
       <li>
-        Place your cursor on the line at which you want the program to run and select <strong><strong>Run to Line</strong></strong> from the pop-up menu or use
-        <strong>Ctrl+R</strong>. Program execution is resumed and suspends just before the specified line is to be executed.
+        Place your cursor on the line at which you want the program to run and select <strong>Run to Line</strong> from the pop-up menu or use
+        <kbd>Ctrl+R</kbd>. Program execution is resumed and suspends just before the specified line is to be executed.
       </li>
       <li>
         It is possible that the line will never be hit and that the program will not suspend. Breakpoints and exceptions cause a thread to suspend before reaching the specified
@@ -70,33 +70,25 @@
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/cbrkpnts.htm">Breakpoints</a><br>
        <a href="../concepts/concepts-5.htm">Java perspectives</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
        <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
        <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a><br>
        <a href="../tasks/tasks-129.htm">Setting execution arguments</a><br>
        <a href="../tasks/tasks-134.htm">Suspending threads</a><br>
-       &nbsp;
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-51.htm">Debug view</a>
     </p>
     <p>
-      <br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
