--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-137.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-137.htm
@@ -17,8 +17,7 @@
       in the Variables view. Variables can be examined by expanding those variables that have children.
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
