--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -39,36 +39,31 @@
         </ul>
       </li>
       <li>
-        Select the expression to be evaluated and select <strong><strong>Display</strong></strong> or <strong><strong>Inspect</strong></strong> from the context pop-up menu. The
+        Select the expression to be evaluated and select <strong>Display</strong> or <strong>Inspect</strong> from the context pop-up menu. The
         result of evaluating the expression is shown in the Display view (if <strong>Display</strong> was chosen), or in the Expressions view (if <strong>Inspect</strong> was
         chosen).
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a><br>
        <a href="../concepts/concepts-7.htm">Java editor</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-134.htm">Suspending threads</a><br>
        <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-52.htm">Display view</a><br>
        <a href="../reference/ref-56.htm">Expressions view</a><br>
        <a href="../reference/ref-56c.htm">Expressions view Show Detail Pane</a><br>
        <a href="../reference/ref-74.htm">Variables view</a><br>
-       <a href="../reference/ref-showdetailpane.htm">Variables view Show Detail Pane</a><br>
-       &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+       <a href="../reference/ref-showdetailpane.htm">Variables view Show Detail Pane</a>
+    </p>
+    <p>
+	<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
