--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
@@ -14,60 +14,53 @@
     </h1>
     <ol>
       <li>
-        From the drop-down menu on the <strong><strong>Debug</strong></strong> button in the workbench toolbar, select <strong>Debug...</strong>.
+        From the drop-down menu on the <strong>Debug</strong> button in the workbench toolbar, select <strong>Debug...</strong>.
       </li>
       <li>
         In the launch configuration dialog, select the <strong>Remote Java Application</strong> entry in the left hand view.
       </li>
       <li>
-        Click the <strong><strong>New</strong></strong> button. A new remote launch configuration is created and three tabs are shown: <strong>Connect</strong>,
+        Click the <strong>New</strong> button. A new remote launch configuration is created and three tabs are shown: <strong>Connect</strong>,
         <strong>Source</strong>, and <strong>Common</strong>.
       </li>
       <li>
-        In the <strong><strong>Project</strong></strong> field of the <strong><strong>Connect</strong></strong> tab, type or browse to select the project to use as a reference for
+        In the <strong>Project</strong> field of the <strong>Connect</strong> tab, type or browse to select the project to use as a reference for
         the launch (for source lookup). A project does not need to be specified.
       </li>
       <li>
-        In the <strong><strong>Host</strong></strong> field of the <strong><strong>Connect</strong></strong> tab, type the IP address or domain name of the host where the Java
+        In the <strong>Host</strong> field of the <strong>Connect</strong> tab, type the IP address or domain name of the host where the Java
         program is running.<br>
          If the program is running on the same machine as the workbench, type <em>localhost</em>.
       </li>
       <li>
-        In the <strong><strong>Port</strong></strong> field of the <strong><strong>Connect</strong></strong> tab, type the port where the remote VM is accepting connections.
+        In the <strong>Port</strong> field of the <strong>Connect</strong> tab, type the port where the remote VM is accepting connections.
         Generally, this port is specified when the remote VM is launched.
       </li>
       <li>
-        The <strong><strong>Allow termination of remote VM</strong></strong> flag is a toggle that determines whether the <strong><strong>Terminate</strong></strong> command is
+        The <strong>Allow termination of remote VM</strong> flag is a toggle that determines whether the <strong>Terminate</strong> command is
         enabled in the debugger. Select this option if you want to be able to terminate the VM to which you are connecting.
       </li>
       <li>
-        Click <strong><strong>Debug</strong></strong>. The launch attempts to connect to a VM at the specified address and port, and the result is displayed in the Debug view. If
+        Click <strong>Debug</strong>. The launch attempts to connect to a VM at the specified address and port, and the result is displayed in the Debug view. If
         the launcher is unable to connect to a VM at the specified address, an error message appears.
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
        <a href="../tasks/tasks-142.htm">Disconnecting from a VM</a><br>
        <a href="../tasks/tasks-129.htm">Setting execution arguments</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-51.htm">Debug view</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
