--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-142.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-142.htm
@@ -20,32 +20,25 @@
         In the Debug view, select the launch.
       </li>
       <li>
-        Click the <strong><strong>Disconnect</strong></strong> button in the view&#39;s toolbar. Communication with the VM is terminated, and all threads in the remote VM are
+        Click the <strong>Disconnect</strong> button in the view&#39;s toolbar. Communication with the VM is terminated, and all threads in the remote VM are
         resumed. Although the remote VM continues to execute, the debug session is now terminated.
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-141.htm">Connecting to a remote VM with the Remote Java application launch configuration</a><br>
        <a href="../tasks/tasks-126.htm">Running and debugging</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-51.htm">Debug view</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
