--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144c.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144c.htm
@@ -1,77 +1,70 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <meta http-equiv="Content-Style-Type" content="text/css">
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Managing conditional breakpoints
-    </title>
-  </head>
-  <body>
-    <h1>
-      Managing conditional breakpoints
-    </h1>
-    <ol>
-      <li>
-        Do one of the following sets of tasks: 
-        <ul>
-          <li>
-            From the editor area: 
-            <ol>
-              <li>
-                In the editor area, open the file where you want to set a condition for a breakpoint.
-              </li>
-              <li>
-                Directly to the left of the line where you want to add the breakpoint, open the marker bar pop-up menu and select <strong>Breakpoint Properties...</strong>.
-              </li>
-            </ol>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
+<title> Managing conditional breakpoints </title>
+</head>
+<body>
+<h1> Managing conditional breakpoints </h1>
+<ol>
+  <li> Do one of the following sets of tasks: 
+    <ul>
+      <li> From the editor area: 
+        <ol>
+          <li> In the editor area, open the file where you want to set a condition 
+            for a breakpoint. </li>
+          <li> Directly to the left of the line where you want to add the breakpoint, 
+            open the marker bar pop-up menu and select <strong>Breakpoint Properties...</strong>. 
           </li>
-          <li>
-            From the breakpoints view: 
-            <ol>
-              <li>
-                In the <strong>Breakpoints view</strong> select the breakpoint to set the condition for
-              </li>
-              <li>
-                In the context menu of the view, select <strong>Properties...</strong>.
-              </li>
-            </ol>
+        </ol>
+      </li>
+      <li> From the breakpoints view: 
+        <ol>
+          <li> In the <strong>Breakpoints view</strong> select the breakpoint 
+            to set the condition for </li>
+          <li> In the context menu of the view, select <strong>Properties...</strong>. 
           </li>
-        </ul>
+        </ol>
       </li>
-      <li>
-        A Breakpoint properties dialog will open.
-      </li>
-      <li>
-        In the properties dialog, check the <strong>Enable Condition</strong> checkbox. To disable the condition, uncheck this checkbox.
-      </li>
-      <li>
-        In the <strong>Condition</strong> field enter the boolean expression for the breakpoint condition.
-      </li>
-      <li>
-        Click <strong>Ok</strong> to close the dialog and commit the changes. While the breakpoint is enabled, thread execution suspends before that line of code is executed if
-        the breakpoint condition evaluates to <em>true</em>. The debugger selects the thread that has suspended and displays the stack frames on that thread&#39;s stack. The line
-        where the breakpoint was set is highlighted in the editor in the Debug perspective.<br>
-         A conditional breakpoint has a question mark overlay on the breakpoint icon. <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"> <a
-        href="../concepts/concepts-10.htm">Debugger</a><br>
-         <a href="../concepts/concepts-5.htm">Java perspectives</a><br>
-         <a href="../concepts/concepts-7.htm">Java editor</a><br>
-        <br>
-         <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"> <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
-         <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
-         <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
-         <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
-         <a href="../tasks/tasks-145.htm">Setting method breakpoints</a><br>
-         <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a> <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height=
-        "27"> <a href="../reference/ref-35.htm">Breakpoints view</a> 
-        <p>
-          &nbsp;<br>
-           &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-          "14"></a>
-        </p>
-      </li>
-    </ol>
-  </body>
+    </ul>
+  </li>
+  <li> A Breakpoint properties dialog will open. </li>
+  <li> In the properties dialog, check the <strong>Enable Condition</strong> checkbox. 
+    To disable the condition, uncheck this checkbox. </li>
+  <li> In the <strong>Condition</strong> field enter the boolean expression for 
+    the breakpoint condition. </li>
+  <li> Click <strong>Ok</strong> to close the dialog and commit the changes. While 
+    the breakpoint is enabled, thread execution suspends before that line of code 
+    is executed if the breakpoint condition evaluates to <em>true</em>. The debugger 
+    selects the thread that has suspended and displays the stack frames on that 
+    thread&#39;s stack. The line where the breakpoint was set is highlighted in 
+    the editor in the Debug perspective.<br>
+    A conditional breakpoint has a question mark overlay on the breakpoint icon. 
+  </li>
+</ol>
+<p> <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"> 
+  <br>
+  <a href="../concepts/concepts-10.htm">Debugger</a><br>
+  <a href="../concepts/concepts-5.htm">Java perspectives</a><br>
+  <a href="../concepts/concepts-7.htm">Java editor</a><br>
+</p>
+<p> <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"> 
+  <br>
+  <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+  <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
+  <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
+  <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
+  <a href="../tasks/tasks-145.htm">Setting method breakpoints</a><br>
+  <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a> 
+</p>  
+<p> <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height= "27"><br>
+  <a href="../reference/ref-35.htm">Breakpoints view</a> 
+</p>
+<p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+          "14"></a> 
+</p>
+</body>
 </html>
 
