--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
@@ -20,7 +20,7 @@
         Open the class in the Outline view, and select the method where you want to add a method breakpoint.
       </li>
       <li>
-        From the method&#39;s pop-up menu, select <strong><strong>Add/Remove Method Breakpoint</strong></strong>.
+        From the method&#39;s pop-up menu, select <strong>Add/Remove Method Breakpoint</strong>.
       </li>
       <li>
         A breakpoint appears in the Breakpoints view. If source exists for the class, then a breakpoint also appears in the marker bar in the file&#39;s editor for the method that
@@ -39,42 +39,34 @@
         double-click the breakpoint in the marker bar
       </li>
       <li>
-        select <strong><strong>Remove</strong></strong> from the breakpoint&#39;s pop-up menu in the marker bar
+        select <strong>Remove</strong> from the breakpoint&#39;s pop-up menu in the marker bar
       </li>
       <li>
-        select the breakpoint in the Breakpoints view and click the <strong><strong>Remove</strong></strong> button
+        select the breakpoint in the Breakpoints view and click the <strong>Remove</strong> button
       </li>
       <li>
-        select <strong><strong>Remove</strong></strong> from its pop-up menu in the Breakpoints view
+        select <strong>Remove</strong> from its pop-up menu in the Breakpoints view
       </li>
     </ul>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/cbrkpnts.htm">Breakpoints</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
        <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
        <a href="../tasks/tasks-144b.htm">Enabling and disabling breakpoints</a><br>
        <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
        <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
-       &nbsp;
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-35.htm">Breakpoints view</a><br>
        <a href="../reference/ref-view-outline.htm">Outline view for Java</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
