--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
@@ -32,24 +32,18 @@
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/cbrkpnts.htm">Breakpoints</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
        <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
        <a href="../tasks/tasks-144b.htm">Enabling and disabling breakpoints</a><br>
        <a href="../tasks/tasks-145.htm">Setting method breakpoints</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-35.htm">Breakpoints view</a>
     </p>
     <p>
