--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-147.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-147.htm
@@ -18,7 +18,7 @@
     </p>
     <ol>
       <li>
-        In the Breakpoints view, click the <strong><strong>Add Java Exception Breakpoint</strong></strong> button or use the equivalent menu item in the context or Run menu. The
+        In the Breakpoints view, click the <strong>Add Java Exception Breakpoint</strong> button or use the equivalent menu item in the context or Run menu. The
         Add Java Exception Breakpoint page opens.
       </li>
       <li>
@@ -28,10 +28,10 @@
         At the bottom of the page, use the check boxes to specify how you want execution to suspend at locations where the exception is thrown. 
         <ul>
           <li>
-            <strong>Choose</strong>Caught if you want execution to suspend at locations where the exception is thrown but caught.
+            Select <strong>Caught</strong> if you want execution to suspend at locations where the exception is thrown but caught.
           </li>
           <li>
-            <strong>Choose</strong>Uncaught if you want execution to suspend at locations where the exception is uncaught.
+            Select <strong>Uncaught</strong> if you want execution to suspend at locations where the exception is uncaught.
           </li>
         </ul>
       </li>
@@ -40,32 +40,24 @@
       <strong>Note:</strong> Exception breakpoints can be enabled and disabled and have hit counts set like a regular breakpoint.
     </p>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
        <a href="../concepts/cbrkpnts.htm">Breakpoints</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-134.htm">Suspending threads</a><br>
        <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
        <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
        <a href="../tasks/tasks-144b.htm">Enabling and disabling breakpoints</a><br>
        <a href="../tasks/tasks-145.htm">Setting method breakpoints</a><br>
-       &nbsp;
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-35.htm">Breakpoints view</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+	<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
