--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
@@ -20,7 +20,7 @@
         In the scrapbook page, either type an expression or highlight an existing expression to be inspected. For example: System.getProperties()
       </li>
       <li>
-        Either click the <strong><strong>Inspect</strong></strong> button in the toolbar or select <strong><strong>Inspect</strong></strong> from the selection&#39;s pop-up menu.
+        Either click the <strong>Inspect</strong> button in the toolbar or select <strong>Inspect</strong> from the selection&#39;s pop-up menu.
       </li>
       <li>
         The result of the inspection appears in the Expressions view, which opens if it is not already visible. The result can be inspected like a variable in the debugger (for
@@ -28,30 +28,23 @@
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-11.htm">Scrapbook</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-149.htm">Creating a Java scrapbook page</a><br>
        <a href="../tasks/tasks-151.htm">Displaying the result of evaluating an expression</a><br>
        <a href="../tasks/tasks-152.htm">Running an expression</a><br>
        <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-56.htm">Expressions view</a><br>
        <a href="../reference/ref-34.htm">Java scrapbook page</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+	<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
