--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-151.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-151.htm
@@ -20,7 +20,7 @@
         In the scrapbook page, either type an expression or highlight an existing expression to be displayed. For example: System.getProperties()
       </li>
       <li>
-        Either click the <strong><strong>Display</strong></strong> button in the toolbar or select <strong><strong>Display</strong></strong> from the selection&#39;s pop-up menu.
+        Either click the <strong>Display</strong> button in the toolbar or select <strong>Display</strong> from the selection&#39;s pop-up menu.
       </li>
       <li>
         The result of the evaluation appears highlighted in the scrapbook editor. The result displayed is either 
@@ -39,37 +39,30 @@
     </p>
     <ul>
       <li>
-        Type and <em>highlight new java.util.Date()</em> in the editor, and click <strong><strong>Display</strong></strong>. A result such as <em>(java.util.Date) Tue Jun 12
+        Type and <em>highlight new java.util.Date()</em> in the editor, and click <strong>Display</strong>. A result such as <em>(java.util.Date) Tue Jun 12
         14:03:17 CDT 2001</em> appears in the editor.
       </li>
       <li>
-        As another example, type and highlight <em>3 + 4</em> in the editor, and press <strong><strong>Display</strong></strong>. The result <em>(int) 7</em> is displayed in the
+        As another example, type and highlight <em>3 + 4</em> in the editor, and press <strong>Display</strong>. The result <em>(int) 7</em> is displayed in the
         editor.
       </li>
     </ul>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-11.htm">Scrapbook</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-152.htm">Running an expression</a><br>
        <a href="../tasks/tasks-150.htm">Inspecting the result of evaluating an expression</a><br>
        <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-34.htm">Java scrapbook page</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+	<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
