--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
@@ -16,37 +16,29 @@
       Running an expression evaluates an expression but does not display a result.
     </p>
     <p>
-      If you select the expression to run and click the <strong><strong>Run</strong></strong> button in the toolbar, no result is displayed, the code is simply run.
+      If you select the expression to run and click the <strong>Run</strong> button in the toolbar, no result is displayed, the code is simply run.
     </p>
     <p>
-      For example, if you type and highlight <em>System.out.println(&quot;Hello World&quot;</em>, and click the <strong><strong>Run</strong></strong> button, <em>Hello World</em>
+      For example, if you type and highlight <em>System.out.println(&quot;Hello World&quot;</em>, and click the <strong>Run</strong> button, <em>Hello World</em>
       appears in the Console view, but no result is displayed in the scrapbook editor or the Expressions view.
     </p>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-6.htm">Java views</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-151.htm">Displaying the result of evaluating an expression</a><br>
        <a href="../tasks/tasks-150.htm">Inspecting the result of evaluating an expression</a><br>
        <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-56.htm">Expressions view</a><br>
        <a href="../reference/ref-45.htm">Console view</a><br>
-       &nbsp;
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+	<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
