--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
@@ -46,8 +46,8 @@
     <p>
       The template edit mode is left by either pressing <kbd>Tab</kbd> on the last template variable or pressing <kbd>Esc</kbd> or <kbd>Enter</kbd>.
     </p>
-    <p>
-      &nbsp;
+    <p>&nbsp;
+      
     </p>
     <p>
       Example:
@@ -85,30 +85,18 @@
       </li>
     </ul>
     <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
-    </p>
-    <p>
-      <a href="../concepts/concepts-7.htm">Java editor</a>
-    </p>
-    <p>
+      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
+      <a href="../concepts/concepts-7.htm">Java editor</a><br>
       <a href="../concepts/ctemplates.htm">Templates</a><br>
-       &nbsp;
     </p>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks">
-    </p>
-    <p>
+      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
       <a href="tasks-54.htm">Using the Java editor</a><br>
        <a href="tasks-203.htm">Writing your own templates</a>
     </p>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
-    </p>
-    <p>
+      <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
       <a href="../reference/ref-preferences-templates.htm">Templates preference page</a>
-    </p>
-    <p>
-      <br>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
