--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-173.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-173.htm
@@ -11,18 +11,17 @@
       Finding and replacing
     </h1>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks">
-    </p>
-    <p>
+      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
       <a href="tasks-54.htm">Using the Java editor</a><br>
        <a href="tasks-181.htm">Using the Find/Replace dialog</a><br>
        <a href="tasks-182.htm">Using Incremental Find</a><br>
        <a href="tasks-187.htm">Finding Next or Previous Match</a><br>
-      <br>
     </p>
     <p>
-      <a href="../hglegal2002.htm"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+      "14"></a>
     </p>
+
   </body>
 </html>
 
