--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -22,7 +22,7 @@
         In the Java editor, if you see an error underlined with a squiggly line, position the caret inside the underlined range and do one of the following 
         <ul>
           <li>
-            Press <strong>Ctrl+1</strong> or
+            Press <kbd>Ctrl+1</kbd> or
           </li>
           <li>
             From the menu bar, select <strong>Edit &gt; Quick Fix</strong>
@@ -33,7 +33,7 @@
         A list of suggested corrections is presented, with a preview displayed when an entry is selected.
       </li>
       <li>
-        Select an entry form the list and press <strong>Enter</strong>.
+        Select an entry form the list and press <kbd>Enter</kbd>.
       </li>
     </ul>
     If you have the <strong>Window &gt; Preference &gt; Java &gt; Editor &gt; Problem Indication &gt; Indicate problems solvable with Quick Fix in vertical ruler</strong> checkbox
@@ -46,7 +46,6 @@
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
        <a href="../concepts/concepts-7.htm">Java editor</a><br>
-       &nbsp;
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
@@ -55,7 +54,6 @@
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
        <a href="../reference/ref-java-editor-quickfix.htm">Quick Fix</a><br>
-       &nbsp;
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
