--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-177.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-177.htm
@@ -22,7 +22,7 @@
         Do one of the following: 
         <ul>
           <li>
-            Press <strong>Ctrl+/</strong> or
+            Press <kbd>Ctrl+/</kbd> or
           </li>
           <li>
             Select <strong>Source &gt; Comment</strong> from the menu bar
@@ -39,7 +39,7 @@
         Do one of the following 
         <ul>
           <li>
-            Press <strong>Ctrl+\</strong> or
+            Press <kbd>Ctrl+\</kbd> or
           </li>
           <li>
             Select <strong>Source &gt; Uncomment</strong> from the menu bar
@@ -48,10 +48,9 @@
       </li>
     </ul>
     <p>
-      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
-    </p>
-    <br>
+      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">    <br>
      <a href="../concepts/concepts-7.htm">Java editor</a> 
+    </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
        <a href="tasks-54.htm">Using the Java editor</a><a href="tasks-54.htm"></a>
