--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -18,17 +18,18 @@
         Find strings to externalize (using the <strong>Find Strings To Externalize</strong> function), select an entry in the resulting dialog and press the
         <strong>Externalize</strong> button or
       </li>
-      <li>
-        Select the compilation unit in which you want to externalize strings and selecting <span class="control">Source &gt; Externalize Strings</span> from the menu bar or
-      </li>
+      
+  <li> Select the compilation unit in which you want to externalize strings and 
+    selecting <strong>Source &gt; Externalize Strings</strong> from the menu bar 
+    or </li>
       <li>
         In the Java editor, select <strong>Source &gt; Externalize Strings</strong> from the pop-up menu
       </li>
     </ul>
-    <p class="Note">
-      Note: Externalizing strings is undoable (with the same restrictions as for refactorings). Use <strong>Refactor &gt; Undo</strong> from the menu bar to undo
-      externalizing strings. 
-    </p>
+    
+<p> <strong>Note:</strong> Externalizing strings is undoable (with the same restrictions 
+  as for refactorings). Use <strong>Refactor &gt; Undo</strong> from the menu 
+  bar to undo externalizing strings. </p>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
        <a href="../concepts/cnls.htm">String Externalization</a><br>
