--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-125.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-125.htm
@@ -31,15 +31,12 @@
         Check the box for the definition that you want to use as the default JRE for the workbench.
       </li>
     </ol>
-    <br>
-     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
-    <p>
+	<p>
+     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> <br>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
-    </p>
-    <p>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
       <a href="tasks-119.htm">Working with JREs</a><br>
        <a href="tasks-121.htm">Adding a new JRE definition</a><br>
        <a href="tasks-123.htm">Editing a JRE definition</a>
@@ -49,7 +46,7 @@
        <a href="../reference/ref-19.htm">Installed JREs preference page</a>
     </p>
     <p>
-      <a href="../hglegal2002.htm"><br>
+      <a href="../hglegal2002.htm">
        <img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
     </p>
   </body>
