--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
@@ -13,17 +13,13 @@
       Running and debugging
     </h1>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a><br>
        <a href="../concepts/cremdbug.htm">Remote debugging</a><br>
        <a href="../concepts/clocdbug.htm">Local debugging</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-9.htm">Changing debugger launch options</a><br>
        <a href="tasks-124.htm">Choosing a JRE for launching a project</a><br>
        <a href="../tasks/tasks-149.htm">Creating a Java scrapbook page</a><br>
@@ -40,17 +36,14 @@
        <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-4.htm">Run and debug actions</a><br>
        <a href="../reference/ref-51.htm">Debug view</a><br>
        <a href="../reference/ref-11.htm">Debug preferences</a><br>
        <a href="../reference/ref-12.htm">Console preferences</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+    <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
