--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
@@ -40,17 +40,13 @@
       frames on that thread&#39;s stack. The line where the breakpoint was set is highlighted in the editor in the Debug perspective.
     </p>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
     <a href="../concepts/concepts-10.htm">Debugger</a><br>
      <a href="../concepts/concepts-5.htm">Java perspectives</a><br>
      <a href="../concepts/concepts-7.htm">Java editor</a><br>
-     <br>
-     
-    <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
     </p>
     <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-146.htm">Applying hit counts</a><br>
        <a href="../tasks/tasks-147.htm">Catching Java exceptions</a><br>
        <a href="../tasks/tasks-144a.htm">Removing breakpoints</a><br>
@@ -59,17 +55,11 @@
        <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
       <a href="../reference/ref-35.htm">Breakpoints view</a>
     </p>
     <p>
-      &nbsp;
-    </p>
-    <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
