--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-156.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-156.htm
@@ -16,7 +16,7 @@
       If an expression you evaluate causes a runtime exception, the exception will be reported in the editor. For example:
     </p>
     <p>
-      Type and select the expression <em>Object x = null; x.toString()</em> in the editor and click <strong><strong>Display</strong></strong> in the toolbar.
+      Type and select the expression <em>Object x = null; x.toString()</em> in the editor and click <strong>Display</strong> in the toolbar.
     </p>
     <p>
       The error message:
@@ -28,22 +28,17 @@
       will be displayed in the editor.
     </p>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-7.htm">Java editor</a>
     </p>
     <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-151.htm">Displaying the result of evaluating an expression</a><br>
        <a href="../tasks/tasks-150.htm">Inspecting the result of evaluating an expression</a><br>
        <a href="../tasks/tasks-152.htm">Running an expression</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+	<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
