--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-159.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-159.htm
@@ -30,13 +30,10 @@
         </ul>
       </li>
     </ul>
-    <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"> 
-    <p>
+    <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"> <br>
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
        <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-       &nbsp;
-    </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
     </p>
